<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/sp_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_plans"
        android:icon="@drawable/sp_plan"
        android:title="@string/menu_plans" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_map" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/sp_logout"
        android:title="@string/menu_logout" />
</menu>
